k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: aa-1216-kompetansemaaltracker
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
