k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: aa-1216-kompetansemaaltracker
  annotations:
    route.openshift.io/termination: edge
  labels:
    ingress-tenant: aa
spec:
  rules:
    - host: aa-1216-kompetansemaaltracker.apps.int.intility.no
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: aa-1216-kompetansemaaltracker
                port:
                  number: 8080
